[package]
name = "wiringx-sys"
version = "2.0.0"
edition = "2021"
description = "low level bindings to the wiringX library"
homepage = "https://wiringx.org"
repository = "https://github.com/Letronix624/wiringx-rs"
license = "MPL-2.0"
keywords = ["GPIO"]
readme = "README.md"

[dependencies]

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
glob = "0.3"
