[package]
name = "wiringx-sys"
version = "0.1.3+milkv-wiringx.1.0.3"
edition = "2021"
description = "low level bindings to the wiringX library"
homepage = "https://wiringx.org"
repository = "https://github.com/Letronix624/wiringx-rs"
license = "MPL-2.0"
keywords = ["GPIO"]
readme = "README.md"

[dependencies]

[build-dependencies]
bindgen = "0.70"
cc = "1.1"
glob = "0.3"
