[package]
name = "wiringx"
version = "0.1.1"
edition = "2021"
description = "safe and Rusty bindings to the wiringX library"
homepage = "https://wiringx.org"
repository = "https://github.com/Letronix624/wiringx-rs"
license = "MPL-2.0"
keywords = ["GPIO", "Milk-V", "embedded"]
readme = "README.md"

[dependencies]
parking_lot = "0.12"
thiserror = "1.0"
wiringx-sys = { version = "0.1.0", path = "../wiringx-sys"}
